deploy: f8228856a8fff6db13b5e3e68e3459a966bc8bc2

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>yopox</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="/blog-11/assets/main.css"/>
+  <link rel="stylesheet" type="text/css" href="/assets/main.css"/>
 </head>
 
 <body class="bg-[--bg] text-[--accent] overflow-x-hidden">
@@ -762,7 +762,7 @@
 
 </main>
 
-<script src="/blog-11/assets/main.js"></script>
+<script src="/assets/main.js"></script>
 </body>
 
 </html>
